tests/snapshots/markdown__parse_unknown_type.snap
---
source: tests/markdown.rs
expression: output
---
error: expected one of: `Arm`, `Expr`, `Field`, `Ident`, `Item`, `ImplItem`, `Lit`, `Pat`, `Stmt`, `Type`, `Vis`, `Generics`, `Fn`, `Mod` or primitives `bool`, `int`, `str`
  ┌─ test input:1:14
  │
1 │ fn main() -> Foo {
  │              ^^^ expected one of: `Arm`, `Expr`, `Field`, `Ident`, `Item`, `ImplItem`, `Lit`, `Pat`, `Stmt`, `Type`, `Vis`, `Generics`, `Fn`, `Mod` or primitives `bool`, `int`, `str`
  │
  = expected one of: `Arm`, `Expr`, `Field`, `Ident`, `Item`, `ImplItem`, `Lit`, `Pat`, `Stmt`, `Type`, `Vis`, `Generics`, `Fn`, `Mod` or primitives `bool`, `int`, `str`
